[chore] evaluate model

--- a/ragas/demo-02.ipynb
+++ b/ragas/demo-02.ipynb
@@ -1416,11 +1416,22 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "- `context_relevancy`: (signal-to-noise ratio of the retrieved context): While the LLM judges all of the context as relevant for the last question, it also judges that most of the retrieved context for the second question is irrelevant. Depending on this metric, you could experiment with different numbers of retrieved contexts to reduce the noise.\n",
+    "- `context_recall`: (if all the relevant information required to answer the question was retrieved): The LLMs evaluate that the retrieved contexts contain the relevant information required to answer the questions correctly.\n",
+    "- `faithfulness`: (factual accuracy of the generated answer): While the LLM judges that the first and last questions are answered correctly, the answer to the second question, which wrongly states that the president did not mention Intel’s CEO, is judged with a faithfulness of 0.5.\n",
+    "- `answer_relevancy`: (how relevant is the generated answer to the question): All of the generated answers are judged as fairly relevant to the questions."
+   ],
+   "id": "c52e673470c408c4"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "2e23b9e4991dafb"
+   "id": "8bf9b7955c1e4268"
   }
  ],
  "metadata": {
