--- a/ragas/demo-02.ipynb
+++ b/ragas/demo-02.ipynb
@@ -1431,7 +1431,169 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "8bf9b7955c1e4268"
+   "id": "9455af51989fe707"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c65a235734030a94"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T08:19:54.827837Z",
+     "start_time": "2025-02-26T08:19:54.785168Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def highlight_cells(value):\n",
+    "    \"\"\"Color cells based on score value.\"\"\"\n",
+    "    if value < 0.5:\n",
+    "        return \"background-color: red; color: white;\"  # Low Score (Bad)\n",
+    "    elif 0.5 <= value < 0.8:\n",
+    "        return \"background-color: orange; color: black;\"  # Medium Score (Warning)\n",
+    "    else:\n",
+    "        return \"background-color: lightgreen; color: black;\"  # High Score (Good)\n",
+    "\n",
+    "def truncate_text(value):\n",
+    "    \"\"\"Truncate text values longer than 200 characters.\"\"\"\n",
+    "\n",
+    "    if isinstance(value, str) and len(value) > 200:\n",
+    "        return value[:200]\n",
+    "\n",
+    "    if isinstance(value, list):\n",
+    "        return \"\\n\".join(value)[:200]\n",
+    "\n",
+    "    return value\n",
+    "\n",
+    "\n",
+    "# Apply styling\n",
+    "styled_df = df.applymap(truncate_text)  # Truncate text fields\n",
+    "styled_df = styled_df.style.applymap(highlight_cells, subset=[\"context_precision\", \"context_recall\", \"faithfulness\", \"answer_relevancy\"])\n",
+    "\n",
+    "# Display in Jupyter Notebook\n",
+    "styled_df\n"
+   ],
+   "id": "8bf9b7955c1e4268",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gq/c9fw94sn7h54jkfy5ydg9m8h0000gn/T/ipykernel_84001/220071749.py:23: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  styled_df = df.applymap(truncate_text)  # Truncate text fields\n",
+      "/var/folders/gq/c9fw94sn7h54jkfy5ydg9m8h0000gn/T/ipykernel_84001/220071749.py:24: FutureWarning: Styler.applymap has been deprecated. Use Styler.map instead.\n",
+      "  styled_df = styled_df.style.applymap(highlight_cells, subset=[\"context_precision\", \"context_recall\", \"faithfulness\", \"answer_relevancy\"])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x34a1cb6a0>"
+      ],
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_80c8c_row0_col4, #T_80c8c_row0_col6, #T_80c8c_row0_col7, #T_80c8c_row1_col4, #T_80c8c_row1_col5, #T_80c8c_row1_col6, #T_80c8c_row1_col7, #T_80c8c_row2_col4, #T_80c8c_row2_col6 {\n",
+       "  background-color: lightgreen;\n",
+       "  color: black;\n",
+       "}\n",
+       "#T_80c8c_row0_col5, #T_80c8c_row2_col5, #T_80c8c_row2_col7 {\n",
+       "  background-color: orange;\n",
+       "  color: black;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_80c8c\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_80c8c_level0_col0\" class=\"col_heading level0 col0\" >user_input</th>\n",
+       "      <th id=\"T_80c8c_level0_col1\" class=\"col_heading level0 col1\" >retrieved_contexts</th>\n",
+       "      <th id=\"T_80c8c_level0_col2\" class=\"col_heading level0 col2\" >response</th>\n",
+       "      <th id=\"T_80c8c_level0_col3\" class=\"col_heading level0 col3\" >reference</th>\n",
+       "      <th id=\"T_80c8c_level0_col4\" class=\"col_heading level0 col4\" >context_precision</th>\n",
+       "      <th id=\"T_80c8c_level0_col5\" class=\"col_heading level0 col5\" >context_recall</th>\n",
+       "      <th id=\"T_80c8c_level0_col6\" class=\"col_heading level0 col6\" >faithfulness</th>\n",
+       "      <th id=\"T_80c8c_level0_col7\" class=\"col_heading level0 col7\" >answer_relevancy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_80c8c_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_80c8c_row0_col0\" class=\"data row0 col0\" >VKS có những tính năng gì nổi bật?</td>\n",
+       "      <td id=\"T_80c8c_row0_col1\" class=\"data row0 col1\" >1. Giới thiệu về VNGCloud Kubernetes\n",
+       "Service - VKS\n",
+       "1.1. VNGCloud Kubernetes Service (VKS) là gì?\n",
+       "VNGCloud Kubernetes Service (hay còn gọi là VKS) là một dịch vụ quản lý Kubernetes được cung\n",
+       "cấp bởi VN</td>\n",
+       "      <td id=\"T_80c8c_row0_col2\" class=\"data row0 col2\" >VKS cung cấp nhiều tính năng nổi bật như quản lý Control Plane tự động, hỗ trợ các phiên bản Kubernetes mới nhất, tích hợp Calico CNI, nâng cấp dễ dàng, tự động mở rộng và sửa lỗi, giảm chi phí và nân</td>\n",
+       "      <td id=\"T_80c8c_row0_col3\" class=\"data row0 col3\" >\n",
+       "    Dịch vụ VKS (VNGCloud Kubernetes Service) có những tính năng nổi bật sau:\n",
+       "\n",
+       "    Quản lý Control Plane hoàn toàn tự động (Fully Managed control plane): VKS giúp bạn giải phóng khỏi gánh nặng quản l</td>\n",
+       "      <td id=\"T_80c8c_row0_col4\" class=\"data row0 col4\" >1.000000</td>\n",
+       "      <td id=\"T_80c8c_row0_col5\" class=\"data row0 col5\" >0.785714</td>\n",
+       "      <td id=\"T_80c8c_row0_col6\" class=\"data row0 col6\" >1.000000</td>\n",
+       "      <td id=\"T_80c8c_row0_col7\" class=\"data row0 col7\" >0.917253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_80c8c_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_80c8c_row1_col0\" class=\"data row1 col0\" >VKS là gì?</td>\n",
+       "      <td id=\"T_80c8c_row1_col1\" class=\"data row1 col1\" >1. Giới thiệu về VNGCloud Kubernetes\n",
+       "Service - VKS\n",
+       "1.1. VNGCloud Kubernetes Service (VKS) là gì?\n",
+       "VNGCloud Kubernetes Service (hay còn gọi là VKS) là một dịch vụ quản lý Kubernetes được cung\n",
+       "cấp bởi VN</td>\n",
+       "      <td id=\"T_80c8c_row1_col2\" class=\"data row1 col2\" >VKS là viết tắt của VNGCloud Kubernetes Service, một dịch vụ quản lý Kubernetes được cung cấp bởi VNGCloud. VKS giúp bạn triển khai và quản lý các ứng dụng dựa trên container một cách dễ dàng và hiệu </td>\n",
+       "      <td id=\"T_80c8c_row1_col3\" class=\"data row1 col3\" >\n",
+       "    VKS là viết tắt của VNGCloud Kubernetes Service.\n",
+       "\n",
+       "    Nó là một dịch vụ quản lý Kubernetes được cung cấp bởi VNGCloud.\n",
+       "\n",
+       "    VKS giúp bạn triển khai và quản lý các ứng dụng dựa trên container một </td>\n",
+       "      <td id=\"T_80c8c_row1_col4\" class=\"data row1 col4\" >1.000000</td>\n",
+       "      <td id=\"T_80c8c_row1_col5\" class=\"data row1 col5\" >0.800000</td>\n",
+       "      <td id=\"T_80c8c_row1_col6\" class=\"data row1 col6\" >1.000000</td>\n",
+       "      <td id=\"T_80c8c_row1_col7\" class=\"data row1 col7\" >0.945761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_80c8c_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_80c8c_row2_col0\" class=\"data row2 col0\" >So sánh public và private cluster trong VKS</td>\n",
+       "      <td id=\"T_80c8c_row2_col1\" class=\"data row2 col1\" >3. Mô hình hoạt động của VKS\n",
+       "VNGCloud Kubernetes Service (VKS) hỗ trợ 2 loại cluster chính là Public Cluster và Private\n",
+       "Cluster. Đối với node group, VKS hỗ trợ 2 loại node group chính là Public Node G</td>\n",
+       "      <td id=\"T_80c8c_row2_col2\" class=\"data row2 col2\" >Public Cluster sử dụng địa chỉ IP Public để giao tiếp, trong khi Private Cluster sử dụng địa chỉ IP Private, dẫn đến Private Cluster có mức độ bảo mật cao hơn. \n",
+       "</td>\n",
+       "      <td id=\"T_80c8c_row2_col3\" class=\"data row2 col3\" >\n",
+       "    Public Cluster và Private Cluster là hai loại cụm Kubernetes chính được hỗ trợ bởi VKS. Mỗi loại có ưu nhược điểm riêng, phù hợp với những nhu cầu bảo mật và sử dụng khác nhau.\n",
+       "\n",
+       "    Dưới đây là b</td>\n",
+       "      <td id=\"T_80c8c_row2_col4\" class=\"data row2 col4\" >1.000000</td>\n",
+       "      <td id=\"T_80c8c_row2_col5\" class=\"data row2 col5\" >0.750000</td>\n",
+       "      <td id=\"T_80c8c_row2_col6\" class=\"data row2 col6\" >1.000000</td>\n",
+       "      <td id=\"T_80c8c_row2_col7\" class=\"data row2 col7\" >0.733616</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 109
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "4c55a7d56fc68a4d"
   }
  ],
  "metadata": {
