--- a/ragas/demo-02.ipynb
+++ b/ragas/demo-02.ipynb
@@ -1300,8 +1300,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-26T08:00:29.269479Z",
-     "start_time": "2025-02-26T08:00:29.238407Z"
+     "end_time": "2025-02-26T08:23:03.014404Z",
+     "start_time": "2025-02-26T08:23:02.965965Z"
     }
    },
    "cell_type": "code",
@@ -1407,12 +1407,12 @@
        "</div>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 98
+   "execution_count": 112
   },
   {
    "metadata": {},
@@ -1426,26 +1426,10 @@
    "id": "c52e673470c408c4"
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "9455af51989fe707"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "c65a235734030a94"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-26T08:21:38.009545Z",
-     "start_time": "2025-02-26T08:21:37.976638Z"
+     "end_time": "2025-02-26T08:24:12.756451Z",
+     "start_time": "2025-02-26T08:24:12.720321Z"
     }
    },
    "cell_type": "code",
@@ -1466,7 +1450,7 @@
     "        return value[:200]\n",
     "\n",
     "    if isinstance(value, list):\n",
-    "        return \"\\n\".join(value)[:200]\n",
+    "        return \"\\n\\n\\n\\n\".join(v[:100] for v in value)\n",
     "\n",
     "    return value\n",
     "\n",
@@ -1483,99 +1467,140 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x34a334d00>"
+       "<pandas.io.formats.style.Styler at 0x34a336410>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_2aff5_row0_col4, #T_2aff5_row0_col6, #T_2aff5_row0_col7, #T_2aff5_row1_col4, #T_2aff5_row1_col5, #T_2aff5_row1_col6, #T_2aff5_row1_col7, #T_2aff5_row2_col4, #T_2aff5_row2_col6 {\n",
+       "#T_7b347_row0_col4, #T_7b347_row0_col6, #T_7b347_row0_col7, #T_7b347_row1_col4, #T_7b347_row1_col5, #T_7b347_row1_col6, #T_7b347_row1_col7, #T_7b347_row2_col4, #T_7b347_row2_col6 {\n",
        "  background-color: lightgreen;\n",
        "  color: black;\n",
        "}\n",
-       "#T_2aff5_row0_col5, #T_2aff5_row2_col5, #T_2aff5_row2_col7 {\n",
+       "#T_7b347_row0_col5, #T_7b347_row2_col5, #T_7b347_row2_col7 {\n",
        "  background-color: orange;\n",
        "  color: black;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_2aff5\">\n",
+       "<table id=\"T_7b347\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_2aff5_level0_col0\" class=\"col_heading level0 col0\" >user_input</th>\n",
-       "      <th id=\"T_2aff5_level0_col1\" class=\"col_heading level0 col1\" >retrieved_contexts</th>\n",
-       "      <th id=\"T_2aff5_level0_col2\" class=\"col_heading level0 col2\" >response</th>\n",
-       "      <th id=\"T_2aff5_level0_col3\" class=\"col_heading level0 col3\" >reference</th>\n",
-       "      <th id=\"T_2aff5_level0_col4\" class=\"col_heading level0 col4\" >context_precision</th>\n",
-       "      <th id=\"T_2aff5_level0_col5\" class=\"col_heading level0 col5\" >context_recall</th>\n",
-       "      <th id=\"T_2aff5_level0_col6\" class=\"col_heading level0 col6\" >faithfulness</th>\n",
-       "      <th id=\"T_2aff5_level0_col7\" class=\"col_heading level0 col7\" >answer_relevancy</th>\n",
+       "      <th id=\"T_7b347_level0_col0\" class=\"col_heading level0 col0\" >user_input</th>\n",
+       "      <th id=\"T_7b347_level0_col1\" class=\"col_heading level0 col1\" >retrieved_contexts</th>\n",
+       "      <th id=\"T_7b347_level0_col2\" class=\"col_heading level0 col2\" >response</th>\n",
+       "      <th id=\"T_7b347_level0_col3\" class=\"col_heading level0 col3\" >reference</th>\n",
+       "      <th id=\"T_7b347_level0_col4\" class=\"col_heading level0 col4\" >context_precision</th>\n",
+       "      <th id=\"T_7b347_level0_col5\" class=\"col_heading level0 col5\" >context_recall</th>\n",
+       "      <th id=\"T_7b347_level0_col6\" class=\"col_heading level0 col6\" >faithfulness</th>\n",
+       "      <th id=\"T_7b347_level0_col7\" class=\"col_heading level0 col7\" >answer_relevancy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_2aff5_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_2aff5_row0_col0\" class=\"data row0 col0\" >VKS có những tính năng gì nổi bật?</td>\n",
-       "      <td id=\"T_2aff5_row0_col1\" class=\"data row0 col1\" >1. Giới thiệu về VNGCloud Kubernetes\n",
+       "      <th id=\"T_7b347_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_7b347_row0_col0\" class=\"data row0 col0\" >VKS có những tính năng gì nổi bật?</td>\n",
+       "      <td id=\"T_7b347_row0_col1\" class=\"data row0 col1\" >1. Giới thiệu về VNGCloud Kubernetes\n",
        "Service - VKS\n",
        "1.1. VNGCloud Kubernetes Service (VKS) là gì?\n",
-       "VNGCloud Kubernetes Service (hay còn gọi là VKS) là một dịch vụ quản lý Kubernetes được cung\n",
-       "cấp bởi VN</td>\n",
-       "      <td id=\"T_2aff5_row0_col2\" class=\"data row0 col2\" >VKS cung cấp nhiều tính năng nổi bật như quản lý Control Plane tự động, hỗ trợ các phiên bản Kubernetes mới nhất, tích hợp Calico CNI, nâng cấp dễ dàng, tự động mở rộng và sửa lỗi, giảm chi phí và nân</td>\n",
-       "      <td id=\"T_2aff5_row0_col3\" class=\"data row0 col3\" >\n",
+       "VNG\n",
+       "\n",
+       "\n",
+       "\n",
+       "3. Mô hình hoạt động của VKS\n",
+       "VNGCloud Kubernetes Service (VKS) hỗ trợ 2 loại cluster chính là Public\n",
+       "\n",
+       "\n",
+       "\n",
+       "cho các tài nguyên  Service  có thuộc tính  serviceType  là  LoadBalancer . Mặc định, một cụm Kubern\n",
+       "\n",
+       "\n",
+       "\n",
+       "VNGCloud Portal.\n",
+       " vks.vngcloud.vn/scheme :\n",
+       "Bắt buộc phải có trong spec của tài nguyên  Service : Khô</td>\n",
+       "      <td id=\"T_7b347_row0_col2\" class=\"data row0 col2\" >VKS cung cấp nhiều tính năng nổi bật như quản lý Control Plane tự động, hỗ trợ các phiên bản Kubernetes mới nhất, tích hợp Calico CNI, nâng cấp dễ dàng, tự động mở rộng và sửa lỗi, giảm chi phí và nân</td>\n",
+       "      <td id=\"T_7b347_row0_col3\" class=\"data row0 col3\" >\n",
        "    Dịch vụ VKS (VNGCloud Kubernetes Service) có những tính năng nổi bật sau:\n",
        "\n",
        "    Quản lý Control Plane hoàn toàn tự động (Fully Managed control plane): VKS giúp bạn giải phóng khỏi gánh nặng quản l</td>\n",
-       "      <td id=\"T_2aff5_row0_col4\" class=\"data row0 col4\" >1.000000</td>\n",
-       "      <td id=\"T_2aff5_row0_col5\" class=\"data row0 col5\" >0.785714</td>\n",
-       "      <td id=\"T_2aff5_row0_col6\" class=\"data row0 col6\" >1.000000</td>\n",
-       "      <td id=\"T_2aff5_row0_col7\" class=\"data row0 col7\" >0.917253</td>\n",
+       "      <td id=\"T_7b347_row0_col4\" class=\"data row0 col4\" >1.000000</td>\n",
+       "      <td id=\"T_7b347_row0_col5\" class=\"data row0 col5\" >0.785714</td>\n",
+       "      <td id=\"T_7b347_row0_col6\" class=\"data row0 col6\" >1.000000</td>\n",
+       "      <td id=\"T_7b347_row0_col7\" class=\"data row0 col7\" >0.917253</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_2aff5_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_2aff5_row1_col0\" class=\"data row1 col0\" >VKS là gì?</td>\n",
-       "      <td id=\"T_2aff5_row1_col1\" class=\"data row1 col1\" >1. Giới thiệu về VNGCloud Kubernetes\n",
+       "      <th id=\"T_7b347_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_7b347_row1_col0\" class=\"data row1 col0\" >VKS là gì?</td>\n",
+       "      <td id=\"T_7b347_row1_col1\" class=\"data row1 col1\" >1. Giới thiệu về VNGCloud Kubernetes\n",
        "Service - VKS\n",
        "1.1. VNGCloud Kubernetes Service (VKS) là gì?\n",
-       "VNGCloud Kubernetes Service (hay còn gọi là VKS) là một dịch vụ quản lý Kubernetes được cung\n",
-       "cấp bởi VN</td>\n",
-       "      <td id=\"T_2aff5_row1_col2\" class=\"data row1 col2\" >VKS là viết tắt của VNGCloud Kubernetes Service, một dịch vụ quản lý Kubernetes được cung cấp bởi VNGCloud. VKS giúp bạn triển khai và quản lý các ứng dụng dựa trên container một cách dễ dàng và hiệu </td>\n",
-       "      <td id=\"T_2aff5_row1_col3\" class=\"data row1 col3\" >\n",
+       "VNG\n",
+       "\n",
+       "\n",
+       "\n",
+       "3. Mô hình hoạt động của VKS\n",
+       "VNGCloud Kubernetes Service (VKS) hỗ trợ 2 loại cluster chính là Public\n",
+       "\n",
+       "\n",
+       "\n",
+       "cho các tài nguyên  Service  có thuộc tính  serviceType  là  LoadBalancer . Mặc định, một cụm Kubern\n",
+       "\n",
+       "\n",
+       "\n",
+       "VNGCloud Portal.\n",
+       " vks.vngcloud.vn/scheme :\n",
+       "Bắt buộc phải có trong spec của tài nguyên  Service : Khô</td>\n",
+       "      <td id=\"T_7b347_row1_col2\" class=\"data row1 col2\" >VKS là viết tắt của VNGCloud Kubernetes Service, một dịch vụ quản lý Kubernetes được cung cấp bởi VNGCloud. VKS giúp bạn triển khai và quản lý các ứng dụng dựa trên container một cách dễ dàng và hiệu </td>\n",
+       "      <td id=\"T_7b347_row1_col3\" class=\"data row1 col3\" >\n",
        "    VKS là viết tắt của VNGCloud Kubernetes Service.\n",
        "\n",
        "    Nó là một dịch vụ quản lý Kubernetes được cung cấp bởi VNGCloud.\n",
        "\n",
        "    VKS giúp bạn triển khai và quản lý các ứng dụng dựa trên container một </td>\n",
-       "      <td id=\"T_2aff5_row1_col4\" class=\"data row1 col4\" >1.000000</td>\n",
-       "      <td id=\"T_2aff5_row1_col5\" class=\"data row1 col5\" >0.800000</td>\n",
-       "      <td id=\"T_2aff5_row1_col6\" class=\"data row1 col6\" >1.000000</td>\n",
-       "      <td id=\"T_2aff5_row1_col7\" class=\"data row1 col7\" >0.945761</td>\n",
+       "      <td id=\"T_7b347_row1_col4\" class=\"data row1 col4\" >1.000000</td>\n",
+       "      <td id=\"T_7b347_row1_col5\" class=\"data row1 col5\" >0.800000</td>\n",
+       "      <td id=\"T_7b347_row1_col6\" class=\"data row1 col6\" >1.000000</td>\n",
+       "      <td id=\"T_7b347_row1_col7\" class=\"data row1 col7\" >0.945761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_2aff5_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_2aff5_row2_col0\" class=\"data row2 col0\" >So sánh public và private cluster trong VKS</td>\n",
-       "      <td id=\"T_2aff5_row2_col1\" class=\"data row2 col1\" >3. Mô hình hoạt động của VKS\n",
-       "VNGCloud Kubernetes Service (VKS) hỗ trợ 2 loại cluster chính là Public Cluster và Private\n",
-       "Cluster. Đối với node group, VKS hỗ trợ 2 loại node group chính là Public Node G</td>\n",
-       "      <td id=\"T_2aff5_row2_col2\" class=\"data row2 col2\" >Public Cluster sử dụng địa chỉ IP Public để giao tiếp, trong khi Private Cluster sử dụng địa chỉ IP Private, dẫn đến Private Cluster có mức độ bảo mật cao hơn. \n",
+       "      <th id=\"T_7b347_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_7b347_row2_col0\" class=\"data row2 col0\" >So sánh public và private cluster trong VKS</td>\n",
+       "      <td id=\"T_7b347_row2_col1\" class=\"data row2 col1\" >3. Mô hình hoạt động của VKS\n",
+       "VNGCloud Kubernetes Service (VKS) hỗ trợ 2 loại cluster chính là Public\n",
+       "\n",
+       "\n",
+       "\n",
+       "dụ:  vks.vngcloud.vn/security-groups: secg-303d9c91-f4b2-400d-8e81-12039167da0c . Ngoài ra, bạn cũng\n",
+       "\n",
+       "\n",
+       "\n",
+       "VNGCloud Portal.\n",
+       " vks.vngcloud.vn/scheme :\n",
+       "Bắt buộc phải có trong spec của tài nguyên  Service : Khô\n",
+       "\n",
+       "\n",
+       "\n",
+       "Security Group cho NLB của bạn bằng cách sử dụng dấu phẩy  ,  để ngăn cách giữa các Security Group. </td>\n",
+       "      <td id=\"T_7b347_row2_col2\" class=\"data row2 col2\" >Public Cluster sử dụng địa chỉ IP Public để giao tiếp, trong khi Private Cluster sử dụng địa chỉ IP Private, dẫn đến Private Cluster có mức độ bảo mật cao hơn. \n",
        "</td>\n",
-       "      <td id=\"T_2aff5_row2_col3\" class=\"data row2 col3\" >\n",
+       "      <td id=\"T_7b347_row2_col3\" class=\"data row2 col3\" >\n",
        "    Public Cluster và Private Cluster là hai loại cụm Kubernetes chính được hỗ trợ bởi VKS. Mỗi loại có ưu nhược điểm riêng, phù hợp với những nhu cầu bảo mật và sử dụng khác nhau.\n",
        "\n",
        "    Dưới đây là b</td>\n",
-       "      <td id=\"T_2aff5_row2_col4\" class=\"data row2 col4\" >1.000000</td>\n",
-       "      <td id=\"T_2aff5_row2_col5\" class=\"data row2 col5\" >0.750000</td>\n",
-       "      <td id=\"T_2aff5_row2_col6\" class=\"data row2 col6\" >1.000000</td>\n",
-       "      <td id=\"T_2aff5_row2_col7\" class=\"data row2 col7\" >0.733616</td>\n",
+       "      <td id=\"T_7b347_row2_col4\" class=\"data row2 col4\" >1.000000</td>\n",
+       "      <td id=\"T_7b347_row2_col5\" class=\"data row2 col5\" >0.750000</td>\n",
+       "      <td id=\"T_7b347_row2_col6\" class=\"data row2 col6\" >1.000000</td>\n",
+       "      <td id=\"T_7b347_row2_col7\" class=\"data row2 col7\" >0.733616</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 111
+   "execution_count": 116
   },
   {
    "metadata": {},
